--- a/Semana-2/style.css
+++ b/Semana-2/style.css
@@ -1,19 +1,7 @@
 *{
-    margin:0;
-    padding:0;
-}
-.botao{
-    height: 55px;
-    width: 250px;
-    border: 0;
-
-    margin-left: 20px;
-    border-radius: 18px;
-    background-color: #72005F;
-    color: white;
-    font-size: 20px;
-    outline-style: none;
-    cursor: pointer;  
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
@@ -23,40 +11,53 @@ body{
     padding: 0;
     display: flex;
     justify-content: center;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bolder;
+    font-weight: bold;
+
+}
+
+#botao{
+    width: 250px;
+    height: 55px;
+
+    background-color: #72005F;
+    color: #FFFF;
+
+    font-size: 18px;
+    font-weight: bold;
+
+    border-radius: 15px;
+    border: none;
+
+    cursor: pointer;
+
+    margin-top: 40px;
+}
+
+h2{
+    color: #BAA193;
+    font-size: 52px;
+
+}
+
+h1{
+    color: #72005F;
+    font-size: 120px;
 }
 
 .container{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     width: 980px;
     height: 100vh;
-    
 }
 
-.goat{
+#bode{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 500px;
+    width: 400px;
     height: 500px;
-}
-
-
-.text{
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    margin-bottom: 40px;
-}
-h1{
-    font-weight: bold;
-    font-size: 120px;
-    color: #72005F;
-}
-h2{
-    font-size: 56px;
-    color: #BAA193;
+    margin-bottom: 180px;
 }
